--- a/Aulas-HTML/exemplos/index.html
+++ b/Aulas-HTML/exemplos/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Site da Rita</title>
-  </head>
-  <body>
-    <h1>Esse é um titulo</h1>
-    <p>Esse aqui é um paragrafo</p>
-  </body>
-</html>
+    <title>Site da Audry</title>
+    </head>
+    
+    <body>
+      <h1>Esse é um título</h1>
+      <p>Esse aqui é um parágrafo</p>
+      <a href='detalhes.html'>Link para a página de detalhes</a>
+    
+    </body>  
+    </html>
