--- a/Aulas-HTML/exercicios/aula2/exercicio-aula2.html
+++ b/Aulas-HTML/exercicios/aula2/exercicio-aula2.html
@@ -6,7 +6,9 @@
     <title>Projeto Casa da Criança</title>
 </head>
     <body>
+
     <!-- Header -->
+    
     <header>
         <!-- Barra Superior -->
     <div id="Barra_superior">
@@ -67,19 +69,21 @@
     <!-- Conteúdo principal da página -->
 
     <main>
+
         <!-- Artigo -->
+
         <article>
             <div>
                 <img src="/images/foto_pátio_projeto.png" alt="Foto contendo várias pias com espelhos para crianças">
                 <p><strong>Abrigo Casa de Carolina</strong></p>
                 <p>Recife/PE</p>
             </div>
-
+            <div>
             <p><strong>Ano de Atuação do Projeto CASA DA CRIANÇA:</strong> 1999</p>
             <p><strong>Tipo de Atendimento:</strong> Abrigo para crianças órfãs, vítimas do abandono e/ou maus tratos</p>
             <p><strong>Endereço:</strong> Av. Conselheiro Aguiar, s/n - Boa Viagem, Recife - PE</p>
             <p><strong>Fone:</strong></p>
-
+            </div>
                 <section>
                    <span><a onclick="fotos" href="#"></a></span>
                    <span><a onclick="Vídeos" href="#"></a></span>
