Deletei a pasta html-aula1.html e inseri seu conteúdo na pasta index.html

--- a/Aulas-HTML/exercicios/aula2/index.html
+++ b/Aulas-HTML/exercicios/aula2/index.html
@@ -21,3 +21,119 @@ Entrega:
  - Abrir um pull request para o repositório original (da Womakers)
  - Acompanhar o prazo e marcar a entrega no Classroom
 -->
+!DOCTYPE html>
+<html>
+
+<head>
+  <html lang="pt-BR">
+
+  </html>
+  <meta charset="utf-8" />
+  <title>Projeto Casa da Criança</title>
+</head>
+
+<body>
+
+  <!-- Header -->
+
+  <header>
+    <!-- Barra Superior -->
+    <div id="Barra_superior">
+
+      <div>
+        <a ref="https://www.facebook.com/ProjetoCasadaCrianca"></a>
+        <img src="images/logo_facebook.png" alt="logo da rede social Facebook">
+      </div>
+      <div>
+        <a ref="https://www.instagram.com/projetocasadacrianca/"></a>
+        <img src="images/logo_instagram.png" alt="logo da rede social Instagram">
+      </div>
+
+    </div>
+
+    <!-- Cabeçalho do topo da página -->
+
+    <div id="Topo_página">
+      <div>
+        <a ref="http://www.projetocasadacrianca.com.br/index.php"></a>
+        <img src="images/logo_projeto_casa_crianca.png"
+          alt="Logo do Projeto da Casa da criança, reepresentado por um desenho de uma criança dentro de uma casinha colorida" />
+      </div>
+
+      <div>
+        <img src="images/crianca_uniforme_projeto.png"
+          alt="Imagem contendo 4 crianças usando camiseta com o logo do projeto">
+        <p>Desde 1999, atua oferecendo uma melhor qualidade de vida a milhares de crianças e adolescentes de baixa renda
+          do Brasil</p>
+      </div>
+
+    </div>
+
+    <!-- Menu de navegação -->
+
+    <div>
+      <nav>
+        <ul>
+          <li><a href="#">Quem somos</a></li>
+          <li><a href="#">Instituições Atendidas</a></li>
+          <li><a href="#">Parceiros</a></li>
+          <li><a href="#">Projetos</a></li>
+          <li><a href="#">Imprensa</a></li>
+          <li><a href="#">Prêmios e Homenagens</a></li>
+          <li><a href="#">Como Participar</a></li>
+          <li><a href="#">Contato</a></li>
+        </ul>
+      </nav>
+    </div>
+
+    <!-- Barra_Interna -->
+
+    <div>
+      <h3>Instituições Atendidas</h3>
+      <div>
+        <span><a href="Página Inicial"></a></span>
+      </div>
+    </div>
+  </header>
+
+  <!-- Conteúdo principal da página -->
+
+  <main>
+
+    <!-- Artigo -->
+
+    <article>
+      <div>
+        <img src="/images/foto_pátio_projeto.png" alt="Foto contendo várias pias com espelhos para crianças">
+        <p><strong>Abrigo Casa de Carolina</strong></p>
+        <p>Recife/PE</p>
+      </div>
+      <div>
+        <p><strong>Ano de Atuação do Projeto CASA DA CRIANÇA:</strong> 1999</p>
+        <p><strong>Tipo de Atendimento:</strong> Abrigo para crianças órfãs, vítimas do abandono e/ou maus tratos</p>
+        <p><strong>Endereço:</strong> Av. Conselheiro Aguiar, s/n - Boa Viagem, Recife - PE</p>
+        <p><strong>Fone:</strong></p>
+      </div>
+      <section>
+        <span><a onclick="fotos" href="#"></a></span>
+        <span><a onclick="Vídeos" href="#"></a></span>
+        <span><a onclick="Mais Informações" href="#"></a></span>
+      </section>
+      <section>
+        <a href="#" JavasCript:history.back()>Voltar"</a>
+      </section>
+    </article>
+  </main>
+
+  <!-- Footer -->
+
+  <footer>
+    <div id="Barra_inferior">
+      <p>Projeto Casa da Criança | R. Dr. Raul Lafayette, 191 - sl.703 | Boa Viagem – Recife/PE | Tel: [81] 3467-9968
+      </p>
+    </div>
+  </footer>
+
+</body>
+
+</html>
