Fechei a tag DOCTYPE que estava aberta

--- a/Aulas-HTML/exercicios/aula2/index.html
+++ b/Aulas-HTML/exercicios/aula2/index.html
@@ -21,7 +21,7 @@ Entrega:
  - Abrir um pull request para o repositório original (da Womakers)
  - Acompanhar o prazo e marcar a entrega no Classroom
 -->
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -29,13 +29,13 @@ Entrega:
   <html lang="pt-BR">
   <meta charset="utf-8" />
   <title>Projeto Casa da Criança</title>
-  
+
 </head>
 
 <body>
 
   <!-- Header -->
-
+  
   <header>
     <!-- Barra Superior -->
     <div id="Barra_superior">
