--- a/aula-css/exercicios/photo-grid/aula-1/index.html
+++ b/aula-css/exercicios/photo-grid/aula-1/index.html
@@ -3,38 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css"/> 
     <link rel="stylesheet" type="text/CSS" href="style.css" media="print"/>
     <title>Photo Grid de Audry Ávalos</title>
 </head>
 <body>
+    <div class="barra-superior">
+        <h1>My Photo Grid</h1>
+    </div>
     <header>
             </div class="profile">
             <br>
             <div class="imagem">
-                <img src="https://instagram.frec34-1.fna.fbcdn.net/v/t51.2885-19/s150x150/101825384_656375424917347_7905665400294703076_n.jpg?_nc_ht=instagram.frec34-1.fna.fbcdn.net&_nc_ohc=JhBPM-_2ipkAX_EpOJc&oh=101e913e584f5c557d88f51c147410c9&oe=5F8995F0" alt="Imagem do perfil de Audry Ávalos no instagram"/>
+                <img src="https://instagram.frec34-1.fna.fbcdn.net/v/t51.2885-19/s150x150/101825384_656375424917347_7905665400294703076_n.jpg?_nc_ht=instagram.frec34-1.fna.fbcdn.net&_nc_ohc=JhBPM-_2ipkAX_EpOJc&oh=101e913e584f5c557d88f51c147410c9&oe=5F8995F0" alt="Imagem de Audry Ávalos"/>
                 <h2>Audry Ávalos</h2>
             </div>
             <div class="texto">
-                <h1>Meu Photo Gride</h1>
-                <p>O site é uma compilação de imagens fotográficas escolhidas aleatoriamente por mim para mostrar a beleza vista pelo olhar por trás das lentes de uma câmera. Através de todas as formas e cores é possível encontrar a onicidade que compõem cada ser e objeto.</ps>
+                <p>O site é uma compilação de imagens fotográficas escolhidas aleatoriamente por mim para mostrar a beleza vista pelo olhar por trás das lentes de uma câmera. Através de todas as formas e cores é possível encontrar a onicidade que compõem cada ser e objeto.</p>
             </div>
         </div class="profile">
     </header>
-        <div class="images_photogrid">
-            <div class="box1">
-                <a href="detalhes-01.html"></a><img src="https://picsum.photos/id/237/536/354" title="Quando um olhar diz muito!" alt="Imagem de um filhote de cachorro da raça Labrador com pelagem na cor preta"/>
-                <a href="detalhes-02.html"></a><img src="https://picsum.photos/id/1084/536/354?grayscale" title="Vida nos lugares mais inóspitos!" alt="Imagem contendo 2 leões-marinhos deitados sob uma geleira"/>
-            </div class="box1">
-            <div class="box2">
+        <section class="conteiner1">
+            <div class="card">
+                <img src="https://picsum.photos/id/237/536/354" title="Quando um olhar diz muito!" alt="Imagem de um filhote de cachorro da raça Labrador com pelagem na cor preta"/><a href="detalhes-01.html"></a>
+                <p>"Quando um olhar diz muito!"</p>
+            </div class="card">
+            <div class="card">
+                <img src="https://picsum.photos/id/1084/536/354?grayscale" title="Vida nos lugares mais inóspitos!" alt="Imagem contendo 2 leões-marinhos deitados sob uma geleira"/><a href="detalhes-02.html"></a>
+                <p>"Vida nos lugares mais inóspitos!"</p>
+            </div class="card">
+        </section class="conteiner1">
+        <br>
+        <section class="conteiner2">
+            <div class="card">
                 <a href="detalhes-03.html"></a><img src="https://images.unsplash.com/photo-1475518845976-0fd87b7e4e5d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjI0MX0&auto=format&fit=crop&w=500&q=60" title="Aurora Boreal" alt="Imagem da Aurora Boreal"/>
-                <a href="detalhes-04.html"></a><img src="https://images.unsplash.com/photo-1525869916826-972885c91c1e?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" title="O entardecer mais lindo!" alt= "Imagem do Gran Canyon no entardecer"/>
-            </div class="box2">
-            <div class="box3">
-                <a href="detalhes-05.html"></a><img src="https://images.unsplash.com/44/Y51aFguqRcGTgsYRYBXV_20140104_085932.jpg?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" title="Vida Selvagem" alt="Imagem contendo um filhote de urso pardo encima de um tronco de árvore caído no chão de uma floresta"/>
+                <p>"Fenômenos Ópticos!"</p>
+            </div class="card">
+            <div class="card">
+                <a href="detalhes-04.html"></a><img src="https://images.unsplash.com/photo-1525869916826-972885c91c1e?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" title="Vida Selvagem!" alt= "Imagem contendo um filhote de urso pardo encima de um tronco de árvore caído no chão de uma floresta"/>
+                <p>"Por Dentro da Floresta."</p>
+            </div class="card">
+        </section class="conteiner2">
+        <br>
+        <section class="conteiner3">
+            <div class="card">
+                <a href="detalhes-05.html"></a><img src="https://images.unsplash.com/44/Y51aFguqRcGTgsYRYBXV_20140104_085932.jpg?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" title="Uma xícara de amor e framboesas?" alt="Imagem contendo uma xíxara branca cheia de framboesas sobre uma mesa de madeira"/>
+                <p>"Uma xícara de amor e framboesas?"</p>
+            </div class="card"> 
+            <div class="card">
                 <a href="detalhes-06.html"></a><img src="https://images.unsplash.com/photo-1529029411565-e04366ee3cc6?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" title="A areia, o mar e as ondas!" alt="Imagem de uma praia no fim da tarde e ao fundo um surfista segurando uma pracha de surf"/>
-            </div class="box3">
-        </div class="images_photogrid">
+                <p>"A areia, o mar e as ondas!"</p>
+            </div class="card">
+        </section class="conteiner3">
     
 </body>
 <footer>
