Finalizado os exercicios 1 e 2 da semana3

--- a/aula-css/exercicios/photo-grid/aula-1/index.html
+++ b/aula-css/exercicios/photo-grid/aula-1/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css"/> 
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital@1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" type="text/CSS" href="style.css" media="print"/>
     <title>Photo Grid de Audry Ávalos</title>
 </head>
@@ -20,7 +21,7 @@
                 <h2>Audry Ávalos</h2>
             </div>
             <div class="texto">
-                <p>O site é uma compilação de imagens fotográficas escolhidas aleatoriamente por mim para mostrar a beleza vista pelo olhar por trás das lentes de uma câmera. Através de todas as formas e cores é possível encontrar a onicidade que compõem cada ser e objeto.</p>
+                <p>O site é uma compilação de imagens fotográficas escolhidas aleatoriamente por mim para mostrar a beleza vista através do olhar por trás das lentes de uma câmera. Todas as formas, cores e possível encontrar a onicidade que compõem cada ser e objeto.</p>
             </div>
         </div class="profile">
     </header>
@@ -30,35 +31,34 @@
                 <p>"Quando um olhar diz muito!"</p>
             </div class="card">
             <div class="card">
-                <img src="https://picsum.photos/id/1084/536/354?grayscale" title="Vida nos lugares mais inóspitos!" alt="Imagem contendo 2 leões-marinhos deitados sob uma geleira"/><a href="detalhes-02.html"></a>
-                <p>"Vida nos lugares mais inóspitos!"</p>
+                <img src="https://images.unsplash.com/photo-1529029411565-e04366ee3cc6?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" title="A areia, o mar e as ondas!" alt="Imagem de uma praia no fim da tarde e ao fundo um surfista segurando uma pracha de surf"/><a href="detalhes-02.html"></a>
+                <p>"A areia, o mar e as ondas!"</p>   
             </div class="card">
         </section class="conteiner1">
         <br>
         <section class="conteiner2">
             <div class="card">
-                <a href="detalhes-03.html"></a><img src="https://images.unsplash.com/photo-1475518845976-0fd87b7e4e5d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjI0MX0&auto=format&fit=crop&w=500&q=60" title="Aurora Boreal" alt="Imagem da Aurora Boreal"/>
-                <p>"Fenômenos Ópticos!"</p>
+                <img src="https://images.unsplash.com/photo-1475518845976-0fd87b7e4e5d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjI0MX0&auto=format&fit=crop&w=500&q=60" title="Aurora Boreal" alt="Imagem da Aurora Boreal"/><a href="detalhes-03.html"></a><p>"Fenômenos Ópticos!"</p>
             </div class="card">
             <div class="card">
-                <a href="detalhes-04.html"></a><img src="https://images.unsplash.com/photo-1525869916826-972885c91c1e?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" title="Vida Selvagem!" alt= "Imagem contendo um filhote de urso pardo encima de um tronco de árvore caído no chão de uma floresta"/>
+                </a><img src="https://images.unsplash.com/photo-1525869916826-972885c91c1e?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" title="Vida Selvagem!" alt= "Imagem contendo um filhote de urso pardo encima de um tronco de árvore caído no chão de uma floresta"/><a href="detalhes-04.html"></a>
                 <p>"Por Dentro da Floresta."</p>
             </div class="card">
         </section class="conteiner2">
         <br>
         <section class="conteiner3">
             <div class="card">
-                <a href="detalhes-05.html"></a><img src="https://images.unsplash.com/44/Y51aFguqRcGTgsYRYBXV_20140104_085932.jpg?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" title="Uma xícara de amor e framboesas?" alt="Imagem contendo uma xíxara branca cheia de framboesas sobre uma mesa de madeira"/>
+                <img src="https://images.unsplash.com/44/Y51aFguqRcGTgsYRYBXV_20140104_085932.jpg?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" title="Uma xícara de amor e framboesas?" alt="Imagem contendo uma xíxara branca cheia de framboesas sobre uma mesa de madeira"/><a href="detalhes-05.html"></a>
                 <p>"Uma xícara de amor e framboesas?"</p>
             </div class="card"> 
             <div class="card">
-                <a href="detalhes-06.html"></a><img src="https://images.unsplash.com/photo-1529029411565-e04366ee3cc6?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" title="A areia, o mar e as ondas!" alt="Imagem de uma praia no fim da tarde e ao fundo um surfista segurando uma pracha de surf"/>
-                <p>"A areia, o mar e as ondas!"</p>
+                <img src="https://picsum.photos/id/1084/536/354?grayscale" title="Vida nos lugares mais inóspitos!" alt="Imagem contendo 2 leões-marinhos deitados sob uma geleira"/><a href="detalhes-06.html"></a>
+                <p>"Vida nos lugares mais inóspitos!"</p>
             </div class="card">
         </section class="conteiner3">
     
 </body>
 <footer>
-        <h3>My Photo Grid desenvolvido por Audry Ávalos | WoMakerscode</h3>
+        <h3>My Photo Grid desenvolvido por Audry Ávalos | WoMakerscode | set. 2020</h3> 
 </footer>
 </html>
