novas correções no link das imagens direcionando para o arquivo detalhes.css

--- a/aula-css/exercicios/photo-grid/aula-1/index.html
+++ b/aula-css/exercicios/photo-grid/aula-1/index.html
@@ -31,28 +31,28 @@
                 <p>"Quando um olhar diz muito!"</p>
             </div class="card">
             <div class="card">
-                <a href="detalhes-02.html"></a><img src="https://images.unsplash.com/photo-1529029411565-e04366ee3cc6?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" title="A areia, o mar e as ondas!" alt="Imagem de uma praia no fim da tarde e ao fundo um surfista segurando uma pracha de surf"/></a>
+                <a href="detalhes-02.html"><img src="https://images.unsplash.com/photo-1529029411565-e04366ee3cc6?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" title="A areia, o mar e as ondas!" alt="Imagem de uma praia no fim da tarde e ao fundo um surfista segurando uma pracha de surf"/></a>
                 <p>"A areia, o mar e as ondas!"</p>   
             </div class="card">
         </section class="conteiner1">
         <br>
         <section class="conteiner2">
             <div class="card">
-                <a href="detalhes-03.html"></a><img src="https://images.unsplash.com/photo-1475518845976-0fd87b7e4e5d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjI0MX0&auto=format&fit=crop&w=500&q=60" title="Aurora Boreal" alt="Imagem da Aurora Boreal"/></a><p>"Fenômenos Ópticos!"</p>
+                <a href="detalhes-03.html"><img src="https://images.unsplash.com/photo-1475518845976-0fd87b7e4e5d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjI0MX0&auto=format&fit=crop&w=500&q=60" title="Aurora Boreal" alt="Imagem da Aurora Boreal"/></a><p>"Fenômenos Ópticos!"</p>
             </div class="card">
             <div class="card">
-                <a href="detalhes-04.html"></a><img src="https://images.unsplash.com/photo-1525869916826-972885c91c1e?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" title="Vida Selvagem!" alt= "Imagem contendo um filhote de urso pardo encima de um tronco de árvore caído no chão de uma floresta"/></a>
+                <a href="detalhes-04.html"><img src="https://images.unsplash.com/photo-1525869916826-972885c91c1e?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" title="Vida Selvagem!" alt= "Imagem contendo um filhote de urso pardo encima de um tronco de árvore caído no chão de uma floresta"/></a>
                 <p>"Por Dentro da Floresta."</p>
             </div class="card">
         </section class="conteiner2">
         <br>
         <section class="conteiner3">
             <div class="card">
-                <a href="detalhes-05.html"></a><img src="https://images.unsplash.com/44/Y51aFguqRcGTgsYRYBXV_20140104_085932.jpg?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" title="Uma xícara de amor e framboesas?" alt="Imagem contendo uma xíxara branca cheia de framboesas sobre uma mesa de madeira"/></a>
+                <a href="detalhes-05.html"><img src="https://images.unsplash.com/44/Y51aFguqRcGTgsYRYBXV_20140104_085932.jpg?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" title="Uma xícara de amor e framboesas?" alt="Imagem contendo uma xíxara branca cheia de framboesas sobre uma mesa de madeira"/></a>
                 <p>"Uma xícara de amor e framboesas?"</p>
             </div class="card"> 
             <div class="card">
-                <a href="detalhes-06.html"></a><img src="https://picsum.photos/id/1084/536/354?grayscale" title="Vida nos lugares mais inóspitos!" alt="Imagem contendo 2 leões-marinhos deitados sob uma geleira"/></a>
+                <a href="detalhes-06.html"><img src="https://picsum.photos/id/1084/536/354?grayscale" title="Vida nos lugares mais inóspitos!" alt="Imagem contendo 2 leões-marinhos deitados sob uma geleira"/></a>
                 <p>"Vida nos lugares mais inóspitos!"</p>
             </div class="card">
         </section class="conteiner3">
