--- a/aula-css/exercicios/photo-grid/aula-1/index.html
+++ b/aula-css/exercicios/photo-grid/aula-1/index.html
@@ -21,7 +21,7 @@
                 <h2>Audry Ávalos</h2>
             </div>
             <div class="texto">
-                <p>O site é uma compilação de imagens fotográficas escolhidas aleatoriamente por mim para mostrar a beleza vista através do olhar por trás das lentes de uma câmera. Todas as formas, cores e possível encontrar a onicidade que compõem cada ser e objeto.</p>
+                <p>O site é uma compilação de imagens fotográficas escolhidas aleatoriamente por mim para mostrar a beleza vista através do olhar por trás das lentes de uma câmera. Todas as formas, cores e traços que existe á nossa volta nos permitem encontrar a onicidade que compõem cada ser e objeto.</p>
             </div>
         </div class="profile">
     </header>
