inseri um espaço entre a imagem e o texto nos arquivos detalhes

--- a/aula-css/exercicios/photo-grid/aula-1/detalhes-01.html
+++ b/aula-css/exercicios/photo-grid/aula-1/detalhes-01.html
@@ -18,8 +18,8 @@
     </header2>
     <section class="container4"></section>
         <div class="card2">
-            <img src="https://picsum.photos/id/237/536/354" title="Quando um olhar diz muito!"
-            alt="Imagem de um filhote de cachorro da raça Labrador com pelagem na cor preta">   
+            <img src="https://picsum.photos/id/237/536/354" title="Quando um olhar diz muito!" alt="Imagem de um filhote de cachorro da raça Labrador com pelagem na cor preta">
+            <br> 
             <span>“O único amigo desinteressado que um homem pode ter neste mundo egoísta, aquele que nunca o abandona, o único que nunca mostra ingratidão ou traição, é o seu cachorro.” (George Graham Vest)</span>
         </div>
     </section class="conteiner4">
