--- a/aula-css/exercicios/photo-grid/aula-1/detalhes-03.html
+++ b/aula-css/exercicios/photo-grid/aula-1/detalhes-03.html
@@ -19,7 +19,8 @@
     </header2>
     <section class="container4"></section>
     <div class="card2">
-        <img src="https://images.unsplash.com/photo-1475518845976-0fd87b7e4e5d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjI0MX0&auto=format&fit=crop&w=500&q=60" title="Aurora Boreal" alt="Imagem da Aurora Boreal"/>s
+        <img src="https://images.unsplash.com/photo-1475518845976-0fd87b7e4e5d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjI0MX0&auto=format&fit=crop&w=500&q=60" title="Aurora Boreal" alt="Imagem da Aurora Boreal"/>
+        <br>
         <span>"Imagem instigante a nos furtar as nossas perspectivas, ora candidamente convidativa, ora efêmera no eternizar, mas,
         indene de dúvidas, misteriosamente atraente até aos sentidos visuais mais céticos, não havendo espaços acinzentados a
         tornar esmorecida a força mística de cores tão esfuziantes e intensas, capaz de transcender pontes para quem ali se
