--- a/aula-css/exercicios/photo-grid/aula-1/index.html
+++ b/aula-css/exercicios/photo-grid/aula-1/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css"/>
-    <link rel="stylesheet" type="text/CSS" href="style.css" media="print"/>
+    <link rel="stylesheet" href="print.css" media="print"/>
     <title>Photo Grid de Audry Ávalos</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
                 <h2>Audry Ávalos</h2>
             </div>
             <div class="texto">
-                <p>O site é uma compilação de imagens fotográficas escolhidas aleatoriamente por mim para mostrar a beleza vista através do olhar por trás das lentes de uma câmera. Todas as formas, cores e traços que existe á nossa volta nos permitem encontrar a onicidade que compõem cada ser e objeto.</p>
+                <p>O site é uma compilação de imagens fotográficas escolhidas aleatoriamente por mim para mostrar a beleza vista através do olhar por trás das lentes de uma câmera. Todas as formas, cores e traços que existe à nossa volta nos permitem encontrar a onicidade que compõem cada ser e objeto.</p>
             </div>
         </div class="profile">
     </header>
