deixei o link voltar em negrito e aumentei o tamanho do card2

--- a/aula-css/exercicios/photo-grid/aula-1/detalhes-06.html
+++ b/aula-css/exercicios/photo-grid/aula-1/detalhes-06.html
@@ -10,14 +10,15 @@
 
 <body>
     <header2>
+        <br>
         <div class="link_voltar">
-            <a href="index.html">Voltar</a>
+            <a href="index.html"><strong>Voltar</strong></a>
         </div>
         <div class="titulo">
             <h1>"Vida nos lugares mais inóspitos!"</h1>
         </div>
     </header2>
-    <section class="container4"></section>
+    <section class="container4">
     <div class="card2">
         <img src="https://picsum.photos/id/1084/536/354?grayscale" title="Vida nos lugares mais inóspitos!" alt="Imagem contendo 2 leões-marinhos deitados sob uma geleira"/>
         <br>
