--- a/aula-css/exercicios/photo-grid/aula-1/detalhes-01.html
+++ b/aula-css/exercicios/photo-grid/aula-1/detalhes-01.html
@@ -9,14 +9,15 @@
 </head>
 <body>
     <header2>
+        <br>
         <div class="link_voltar">
-            <a href="index.html">Voltar</a>
+            <a href="index.html"><strong>Voltar</strong></a>
         </div>
         <div class="titulo">
             <h1>"Quando um olhar diz muito!"</h1>
         </div>
     </header2>
-    <section class="container4"></section>
+    <section class="container4">
         <div class="card2">
             <img src="https://picsum.photos/id/237/536/354" title="Quando um olhar diz muito!" alt="Imagem de um filhote de cachorro da raça Labrador com pelagem na cor preta">
             <br> 
