--- a/aula-css/exercicios/photo-grid/aula-1/detalhes-02.html
+++ b/aula-css/exercicios/photo-grid/aula-1/detalhes-02.html
@@ -11,14 +11,15 @@
 
 <body>
     <header2>
+        <br>
         <div class="link_voltar">
-            <a href="index.html">Voltar</a>
+            <a href="index.html"><strong>Voltar</strong></a>
         </div>
         <div class="titulo">
             <h1>"A areia, o mar e as ondas!"</h1>
         </div>
     </header2>
-    <section class="container4"></section>
+    <section class="container4">
     <div class="card2">
         <img src="https://images.unsplash.com/photo-1529029411565-e04366ee3cc6?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" title="A areia, o mar e as ondas!" alt="Imagem de uma praia no fim da tarde e ao fundo um surfista segurando uma pracha de surf"/>
         <br>
