--- a/aula-css/exercicios/photo-grid/aula-1/detalhes-03.html
+++ b/aula-css/exercicios/photo-grid/aula-1/detalhes-03.html
@@ -10,14 +10,15 @@
 </head>
 <body>
     <header2>
+        <br>
         <div class="link_voltar">
-            <a href="index.html">Voltar</a>
+            <a href="index.html"><strong>Voltar</strong></a>
         </div>
         <div class="titulo">
             <h1>"Fenômenos Ópticos!"</h1>
         </div>
     </header2>
-    <section class="container4"></section>
+    <section class="container4">
     <div class="card2">
         <img src="https://images.unsplash.com/photo-1475518845976-0fd87b7e4e5d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjI0MX0&auto=format&fit=crop&w=500&q=60" title="Aurora Boreal" alt="Imagem da Aurora Boreal"/>
         <br>
