--- a/aula-css/exercicios/photo-grid/aula-1/detalhes-05.html
+++ b/aula-css/exercicios/photo-grid/aula-1/detalhes-05.html
@@ -10,14 +10,15 @@
 
 <body>
     <header2>
+        <br>
         <div class="link_voltar">
-            <a href="index.html">Voltar</a>
+            <a href="index.html"><strong>Voltar</strong></a>
         </div>
         <div class="titulo">
             <h1>"Uma xícara de amor e framboesas?"</h1>
         </div>
     </header2>
-    <section class="container4"></section>
+    <section class="container4">
     <div class="card2">
         <img src="https://images.unsplash.com/44/Y51aFguqRcGTgsYRYBXV_20140104_085932.jpg?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" title="Uma xícara de amor e framboesas?" alt="Imagem contendo uma xíxara branca cheia de framboesas sobre uma mesa de madeira"/>
         <br>
